# Kolorize

./: .gitignore  app.py  pyproject.toml  requirements.txt
api/: inference.py  main.py
compression/: benchmark.py  export_onnx.py  quantize.py
data/: dataset.py  transforms.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Hero.tsx  ImageUpload.tsx  ResultView.tsx  TechStack.tsx
model/: _rrdb.py  attention.py  diffusion.py  losses.py  super_resolution.py  unet.py
training/: config.py  evaluate.py  train.py
